--- a/app/assets/builds/tailwind.css
+++ b/app/assets/builds/tailwind.css
@@ -189,7 +189,55 @@ select { background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='h
 *,
 ::backdrop,
 ::after,
-::before { --tw-border-spacing-x: 0; --tw-border-spacing-y: 0; --tw-translate-x: 0; --tw-translate-y: 0; --tw-rotate: 0; --tw-skew-x: 0; --tw-skew-y: 0; --tw-scale-x: 1; --tw-scale-y: 1; --tw-pan-x: ; --tw-pan-y: ; --tw-pinch-zoom: ; --tw-scroll-snap-strictness: proximity; --tw-gradient-from-position: ; --tw-gradient-via-position: ; --tw-gradient-to-position: ; --tw-ordinal: ; --tw-slashed-zero: ; --tw-numeric-figure: ; --tw-numeric-spacing: ; --tw-numeric-fraction: ; --tw-ring-inset: ; --tw-ring-offset-width: 0; --tw-ring-offset-color: #fff; --tw-ring-color: #3b82f680; --tw-ring-offset-shadow: 0 0 #0000; --tw-ring-shadow: 0 0 #0000; --tw-shadow: 0 0 #0000; --tw-shadow-colored: 0 0 #0000; --tw-blur: ; --tw-brightness: ; --tw-contrast: ; --tw-grayscale: ; --tw-hue-rotate: ; --tw-invert: ; --tw-saturate: ; --tw-sepia: ; --tw-drop-shadow: ; --tw-backdrop-blur: ; --tw-backdrop-brightness: ; --tw-backdrop-contrast: ; --tw-backdrop-grayscale: ; --tw-backdrop-hue-rotate: ; --tw-backdrop-invert: ; --tw-backdrop-opacity: ; --tw-backdrop-saturate: ; --tw-backdrop-sepia: ; }
+::before {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x: 0;
+  --tw-pan-y: 0;
+  --tw-pinch-zoom: 1;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-gradient-from-position: 0% 0%;
+  --tw-gradient-via-position: 50% 50%;
+  --tw-gradient-to-position: 100% 100%;
+  --tw-ordinal: 1;
+  --tw-slashed-zero: 0;
+  --tw-numeric-figure: normal;
+  --tw-numeric-spacing: normal;
+  --tw-numeric-fraction: normal;
+  --tw-ring-inset: 0;
+  --tw-ring-offset-width: 0;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: #3b82f680;
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur: 0;
+  --tw-brightness: 100%;
+  --tw-contrast: 100%;
+  --tw-grayscale: 0%;
+  --tw-hue-rotate: 0deg;
+  --tw-invert: 0%;
+  --tw-saturate: 100%;
+  --tw-sepia: 0%;
+  --tw-drop-shadow: 0 0 #0000;
+  --tw-backdrop-blur: 0;
+  --tw-backdrop-brightness: 100%;
+  --tw-backdrop-contrast: 100%;
+  --tw-backdrop-grayscale: 0%;
+  --tw-backdrop-hue-rotate: 0deg;
+  --tw-backdrop-invert: 0%;
+  --tw-backdrop-opacity: 1;
+  --tw-backdrop-saturate: 100%;
+  --tw-backdrop-sepia: 0%;
+}
 .container { width: 100%; }
 
 @media (min-width: 640px) { .container { max-width: 640px; } }
